--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -24,7 +24,20 @@
     width: 65%;
     float: left;
 }
+
+.preload {
+  width:100px;
+  height: 100px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index:99999;
+}
 </style>
+
+<div class="preload">
+  <img src="../static/img/loader.gif">
+</div>
 
 <!-- Navigation -->
 <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
@@ -77,36 +90,36 @@
                 </li>
                 <li>
                     <a href="#"><i class="fa fa-dashboard fa-fw"></i> Dashboards<span class="fa arrow"></span></a>
-                    <ul class="nav nav-second-level">
+                    <ul class="nav nav-second-level out collapse">
                         <li>
                             <a href="/"><i class="fa fa-book fa-fw"></i> Instructors</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-graduation-cap fa-fw"></i> Classes</a>
+                            <a href="#"onClick="return false;"><i class="fa fa-graduation-cap fa-fw"></i> Classes</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-filter fa-fw"></i> Yogis</a>
+                            <a href="#"onClick="return false;"><i class="fa fa-filter fa-fw"></i> Yogis</a>
                         </li>
                     </ul>
                 </li>
                 <li>
                   <a href="#"><i class="fa fa-upload fa-fw"></i> Import Data<span class="fa arrow"></span></a>
-                  <ul class="nav nav-second-level">
+                  <ul class="nav nav-second-level out collapse">
                       <li>
-                          <a href="mind-body"><i class="fa fa-book fa-fw"></i> Mind Body</a>
+                          <a href="/mind-body"><i class="fa fa-book fa-fw"></i> Mind Body</a>
                       </li>
                       <li>
-                          <a href="#"><i class="fa fa-file-excel-o fa-fw"></i> CSV Import</a>
+                          <a href="#"onClick="return false;"><i class="fa fa-file-excel-o fa-fw"></i> CSV Import</a>
                       </li>
                   </ul>
                 </li>
 
 
                 <li>
-                    <a href="#"><i class="fa fa-users fa-fw"></i> Run Promotions</a>
+                    <a href="#"onClick="return false;"><i class="fa fa-users fa-fw"></i> Run Promotions</a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-twitter fa-fw"></i> Social Media</a>
+                    <a href="#"onClick="return false;"><i class="fa fa-twitter fa-fw"></i> Social Media</a>
                 </li>
             </ul>
         </div>
