--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -33,6 +33,9 @@
   left: 50%;
   z-index:99999;
 }
+.disabled-link{
+  pointer-events: none;
+}
 </style>
 
 <div class="preload">
@@ -95,10 +98,10 @@
                             <a href="/"><i class="fa fa-book fa-fw"></i> Instructors</a>
                         </li>
                         <li>
-                            <a href="#"onClick="return false;"><i class="fa fa-graduation-cap fa-fw"></i> Classes</a>
+                            <a href="#" class="disabled-link" ><i class="fa fa-graduation-cap fa-fw"></i> Classes</a>
                         </li>
                         <li>
-                            <a href="#"onClick="return false;"><i class="fa fa-filter fa-fw"></i> Yogis</a>
+                            <a href="#" class="disabled-link" ><i class="fa fa-filter fa-fw"></i> Yogis</a>
                         </li>
                     </ul>
                 </li>
@@ -109,17 +112,17 @@
                           <a href="/mind-body"><i class="fa fa-book fa-fw"></i> Mind Body</a>
                       </li>
                       <li>
-                          <a href="#"onClick="return false;"><i class="fa fa-file-excel-o fa-fw"></i> CSV Import</a>
+                          <a href="#" class="disabled-link" ><i class="fa fa-file-excel-o fa-fw"></i> CSV Import</a>
                       </li>
                   </ul>
                 </li>
 
 
                 <li>
-                    <a href="#"onClick="return false;"><i class="fa fa-users fa-fw"></i> Run Promotions</a>
+                    <a href="#" class="disabled-link" ><i class="fa fa-users fa-fw"></i> Run Promotions</a>
                 </li>
                 <li>
-                    <a href="#"onClick="return false;"><i class="fa fa-twitter fa-fw"></i> Social Media</a>
+                    <a href="#" class="disabled-link" ><i class="fa fa-twitter fa-fw"></i> Social Media</a>
                 </li>
             </ul>
         </div>
